# roman-lcs

./: .gitignore  README.md  pyproject.toml
data/prf_models/: roman_WFI_ramp_F087_1_SCA02_shape_model_cad0_row1792-col1792_size256.fits  roman_WFI_ramp_F146_1_SCA02_shape_model_cad0_row1792-col1792_size256.fits  roman_WFI_ramp_F213_1_SCA02_shape_model_cad0_row1792-col1792_size256.fits
data/templates/: lc-ext0-header.txt
notebooks/: roman_psfmachine_test.ipynb
src/: build_prf.py  build_prf_F087_cmd.txt  build_prf_F146_cmd.txt  do_phot.py  do_phot_F087_cmd.txt  do_phot_F146_cmd.txt  do_phot_F213_cmd.txt
src/roman_lcs/: __init__.py  machine.py  perturbation.py  roman.py  utils.py
