[tool.poetry]
name = "roman-lcs"
version = "0.1.0"
description = "Tools to compute PSF photometry with Roman simulated data"
authors = ["Jorge Martinez-Palomera <jorgemarpa@ug.uchile.cl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "roman_lcs", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.26.4"
scipy = "^1.9.0"
pandas = "^1.5.3"
astropy = "^5.3.4"
tqdm = "^4.54"
matplotlib = "^3.3.3"
patsy = "^0.5.1"
lightkurve = "^2.0"
fitsio = "^1.1.3"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = "^0.25.2"
mkdocs-material = "^9.5.33"
ruff = "^0.6.2"
pytest = "^8.3.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Assumes Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`), a subset of pycodestyle (`E`) and isort (`I`).
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"